k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapispoc-service
  labels:
    app: kubeapispoc
spec:
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: 80
     protocol: TCP
